--- a/src/index.css
+++ b/src/index.css
@@ -12,3 +12,149 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+
+.app-container{
+  height: 100vh;
+  overflow: hidden;
+  display: grid;
+  grid-template-rows: 1fr 3fr;
+}
+.speak{
+  border-radius: 1em;
+  background: brown;
+  cursor: pointer;
+  padding: 1em;
+}
+#icon{
+  margin-top: 2em;
+}
+
+#input-area{
+  display: grid;
+  grid-template-columns: 8fr 1fr;
+}
+
+#input{
+  height: 100%;
+  font-size: 50px;
+  padding: 1em;
+  width: 100%;
+  box-sizing: border-box;
+}
+/*!
+ * 
+ *   simple-keyboard v2.6.2
+ *   https://github.com/hodgef/simple-keyboard
+ * 
+ *   Copyright (c) Francisco Hodge (https://github.com/hodgef)
+ * 
+ *   This source code is licensed under the MIT license found in the
+ *   LICENSE file in the root directory of this source tree.
+ *   
+ */
+ body,html{
+  margin:0;
+  padding:0
+}
+.simple-keyboard {
+  display: grid;
+  font-family:HelveticaNeue-Light,Helvetica Neue Light,Helvetica Neue,Helvetica,Arial,Lucida Grande,sans-serif;
+  width:100%;
+  -webkit-user-select:none;
+  -moz-user-select:none;
+  -ms-user-select:none;
+  user-select:none;
+  -webkit-box-sizing:border-box;
+  box-sizing:border-box;
+  overflow:hidden;
+  -ms-touch-action:manipulation;
+  touch-action:manipulation;
+   height:auto;
+   font-size:3em ;
+}
+.simple-keyboard .hg-row{
+  display:-ms-flexbox;
+  display:flex;
+   height:auto
+}
+.simple-keyboard .hg-row:not(:last-child){
+  margin-bottom:5px
+}
+.simple-keyboard .hg-row .hg-button:not(:last-child){
+  margin-right:5px
+}
+.simple-keyboard .hg-button{
+  display:inline-block;
+  -ms-flex-positive:1;
+  flex-grow:1;
+  cursor:pointer;
+  
+}
+.hg-standardBtn{
+  height: auto;
+  
+}
+.simple-keyboard.hg-theme-default{
+  background-color:rgba(0,0,0,.1);
+  padding:5px;
+  border-radius:5px
+}
+.simple-keyboard.hg-theme-default .hg-button{
+  -webkit-box-shadow:0 0 3px -1px rgba(0,0,0,.3);
+  box-shadow:0 0 3px -1px rgba(0,0,0,.3);
+  height:auto;
+  border-radius:5px;
+  -webkit-box-sizing:border-box;
+  box-sizing:border-box;
+  padding:5px;
+  background:#fff;
+  border-bottom:1px solid #b5b5b5;
+  cursor:pointer;
+  display:-ms-flexbox;
+  display:flex;
+  -ms-flex-align:center;
+  align-items:center;
+  -ms-flex-pack:center;
+  justify-content:center
+}
+.simple-keyboard.hg-theme-default .hg-button:active{
+  background:#e4e4e4
+}
+.simple-keyboard.hg-theme-default.hg-layout-numeric .hg-button{
+  width:33.3%;
+  height:auto;
+  -ms-flex-align:center;
+  align-items:center;
+  display:-ms-flexbox;
+  display:flex;
+  -ms-flex-pack:center;
+  justify-content:center
+}
+.simple-keyboard.hg-theme-default .hg-button.hg-button-numpadadd,.simple-keyboard.hg-theme-default .hg-button.hg-button-numpadenter{
+  height:85px
+}
+.simple-keyboard.hg-theme-default .hg-button.hg-button-numpad0{
+  width:105px
+}
+.simple-keyboard.hg-theme-default .hg-button.hg-button-com{
+  max-width:85px
+}
+.simple-keyboard.hg-theme-default .hg-button.hg-standardBtn.hg-button-at{
+  max-width:45px
+}
+.simple-keyboard.hg-theme-default .hg-button.hg-button-space{
+  min-height: 1.2em;
+  min-width: 4em;
+}
+
+.simple-keyboard.hg-theme-default .hg-button.hg-selectedButton{
+  background:rgba(5,25,70,.53);
+  color:#fff
+}
+
+.simple-keyboard.hg-layout-default .hg-button.hg-red {
+  background: rgb(255, 0, 0, 0.7);
+  color: white;
+}
+
+/*# sourceMappingURL=index.css.map*/
